# tacview-time-sync

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  lint-test.yml
tacview_timesync/: tvts.py
tests/: test_main.py  test_tvts.py
